--- a/index.html
+++ b/index.html
@@ -29,6 +29,52 @@
 </style>
 
 <script>
+  const ICONS = {
+    confluence: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <linearGradient id="confluence-gradient-1" gradientUnits="userSpaceOnUse" x1="486.54" y1="533.30" x2="166.13" y2="349.18" gradientTransform="matrix(1 0 0 -1 0 514.17)">
+        <stop offset="0.18" style="stop-color:var(--color-text)"/>
+        <stop offset="1" style="stop-color:var(--color-text)"/>
+      </linearGradient>
+      <linearGradient id="confluence-gradient-2" gradientUnits="userSpaceOnUse" x1="159.13" y1="-20.90" x2="-161.36" y2="163.30" gradientTransform="matrix(-1 0 0 1 184.52 -2408.71)">
+        <stop offset="0.18" style="stop-color:var(--color-text)"/>
+        <stop offset="1" style="stop-color:var(--color-text)"/>
+      </linearGradient>
+      <path fill="url(#confluence-gradient-1)" d="M18.6,385.6c-5.3,8.6-11.2,18.7-16.3,26.6c-4.5,7.6-2.1,17.5,5.5,22.2l105.9,65.2c7.7,4.7,17.7,2.4,22.4-5.3 c0-0.1,0.1-0.2,0.1-0.2c4.2-7.1,9.7-16.3,15.6-26.2c42-69.2,84.2-60.8,160.2-24.4l105,49.9c8.1,3.9,17.8,0.4,21.7-7.7 c0.1-0.1,0.1-0.3,0.2-0.4l50.4-114.1c3.6-8.1-0.1-17.6-8.1-21.3c-22.2-10.4-66.2-31.2-105.9-50.3 C232.7,230.1,111.4,234.6,18.6,385.6z"/>
+      <path fill="url(#confluence-gradient-2)" d="M493.4,126.8c5.3-8.6,11.2-18.7,16.3-26.6c4.5-7.6,2.1-17.5-5.5-22.2L398.4,12.8c-7.5-5-17.6-3.1-22.6,4.4 c-0.2,0.3-0.4,0.6-0.6,1c-4.2,7.1-9.7,16.3-15.6,26.2c-42,69.2-84.2,60.8-160.2,24.4L94.6,19.1c-8.1-3.9-17.8-0.4-21.7,7.7 c-0.1,0.1-0.1,0.3-0.2,0.4L22.2,141.3c-3.6,8.1,0.1,17.6,8.1,21.3C52.5,173,96.6,193.8,136.3,213C279.3,282.2,400.6,277.6,493.4,126.8z"/>
+    </svg>`,
+    jira: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <path fill="var(--color-text)" d="M490.6,7.4H243.9c0,59.6,49.9,108,111.2,108h45.6v42.2c0,59.6,49.9,108,111.2,108V28.1 C512,16.4,502.7,7.4,490.6,7.4z"/>
+      <linearGradient id="jira-gradient-1" gradientUnits="userSpaceOnUse" x1="380.90" y1="123.39" x2="279.14" y2="231.43" gradientTransform="matrix(1 0 0 -1 0 514)">
+        <stop offset="0.176" style="stop-color:var(--color-text)"/>
+        <stop offset="1" style="stop-color:var(--color-text)"/>
+      </linearGradient>
+      <path fill="url(#jira-gradient-1)" d="M368.7,126.5H121.9c0,59.6,49.9,108,111.2,108h45.6v42.9c0,59.6,49.9,108,111.2,108V147.3 C390.1,136.2,380.8,126.5,368.7,126.5z"/>
+      <linearGradient id="jira-gradient-2" gradientUnits="userSpaceOnUse" x1="265.96" y1="243.34" x2="148.12" y2="361.39" gradientTransform="matrix(1 0 0 -1 0 514)">
+        <stop offset="0.176" style="stop-color:var(--color-text)"/>
+        <stop offset="1" style="stop-color:var(--color-text)"/>
+      </linearGradient>
+      <path fill="url(#jira-gradient-2)" d="M246.7,246.3H0c0,59.6,49.9,108,111.2,108h45.6v42.2c0,59.6,49.9,108,111.2,108V267.1 C268.1,255.3,258.1,246.3,246.7,246.3z"/>
+    </svg>`,
+    x: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300.251">
+      <path fill="var(--color-text)" d="M178.57 127.15 290.27 0h-26.46l-97.03 110.38L89.34 0H0l117.13 166.93L0 300.25h26.46l102.4-116.59 81.8 116.59h89.34M36.01 19.54H76.66l187.13 262.13h-40.66"/>
+    </svg>`,
+    n8n: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <path fill="var(--color-text)" d="M458.1,229.1c-25.1,0-46.2-17.2-52.2-40.4h-61.8c-13.2,0-24.4,9.5-26.6,22.5l-2.2,13.3 c-2,12.2-8.2,23.4-17.5,31.6c9.3,8.2,15.5,19.3,17.5,31.6l2.2,13.3c2.2,13,13.4,22.5,26.6,22.5h7.9c6-23.2,27.1-40.4,52.2-40.4 c29.8,0,53.9,24.1,53.9,53.9c0,29.8-24.1,53.9-53.9,53.9c-25.1,0-46.2-17.2-52.2-40.4h-7.9c-26.3,0-48.8-19-53.2-45l-2.2-13.3 c-2.2-13-13.4-22.5-26.6-22.5h-21.4c-6,23.2-27.1,40.4-52.2,40.4s-46.2-17.2-52.2-40.4h-30.3c-6,23.2-27.1,40.4-52.2,40.4 C24.1,309.9,0,285.8,0,256s24.1-53.9,53.9-53.9c25.1,0,46.2,17.2,52.2,40.4h30.3c6-23.2,27.1-40.4,52.2-40.4s46.2,17.2,52.2,40.4 h21.4c13.2,0,24.4-9.5,26.6-22.5l2.2-13.3c4.3-26,26.8-45,53.2-45h61.8c6-23.2,27.1-40.4,52.2-40.4c29.8,0,53.9,24.1,53.9,53.9 S487.9,229.1,458.1,229.1"/>
+    </svg>`,
+    github: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024">
+      <path fill="var(--color-text)" fill-rule="evenodd" clip-rule="evenodd" d="M512 0C229.12 0 0 229.12 0 512c0 226.56 146.56 417.92 350.08 485.76 25.6 4.48 35.2-10.88 35.2-24.32 0-12.16-0.64-52.48-0.64-95.36-128.64 23.68-161.92-31.36-172.16-60.16-5.76-14.72-30.72-60.16-52.48-72.32-17.92-9.6-43.52-33.28-0.64-33.92 40.32-0.64 69.12 37.12 78.72 52.48 46.08 77.44 119.68 55.68 149.12 42.24 4.48-33.28 17.92-55.68 32.64-68.48-113.92-12.8-233.6-56.96-233.6-252.8 0-55.68 19.84-101.76 52.48-137.6-5.12-12.8-23.04-65.28 5.12-135.68 0 0 42.88-13.44 140.8 52.48 40.96-11.52 84.48-17.28 128-17.28 43.52 0 87.04 5.76 128 17.28 97.92-66.56 140.8-52.48 140.8-52.48 28.16 70.4 10.24 122.88 5.12 135.68 32.64 35.84 52.48 81.28 52.48 137.6 0 196.48-119.68 240-233.6 252.8 18.56 16 34.56 46.72 34.56 94.72 0 68.48-0.64 123.52-0.64 140.8 0 13.44 9.6 29.44 35.2 24.32C877.44 929.92 1024 737.92 1024 512 1024 229.12 794.88 0 512 0z"/>
+    </svg>`,
+    cloudflare: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <path fill="var(--color-text)" d="M407.906 319.913c2.083-6.155 3.337-12.732 3.337-19.577 0-33.68-27.308-60.988-60.988-60.988-8.494 0-16.576 1.736-23.927 4.87-13.295-51.481-59.796-89.539-115.328-89.539-65.758 0-119.009 53.251-119.009 119.009 0 1.736 0.087 3.424 0.174 5.131-46.002 8.32-81.075 48.346-81.075 96.866 0 54.117 43.884 98.001 98.001 98.001h279.002c45.449 0 82.288-36.839 82.288-82.288 0-38.947-27.134-71.627-63.363-80.295z"/>
+    </svg>`,
+    chat: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 320">
+      <path fill="var(--color-text)" d="m297.06 130.97c7.26-21.79 4.76-45.66-6.85-65.48-17.46-30.4-52.56-46.04-86.84-38.68-15.25-17.18-37.16-26.95-60.13-26.81-35.04-.08-66.13 22.48-76.91 55.82-22.51 4.61-41.94 18.7-53.31 38.67-17.59 30.32-13.58 68.54 9.92 94.54-7.26 21.79-4.76 45.66 6.85 65.48 17.46 30.4 52.56 46.04 86.84 38.68 15.24 17.18 37.16 26.95 60.13 26.8 35.06.09 66.16-22.49 76.94-55.86 22.51-4.61 41.94-18.7 53.31-38.67 17.57-30.32 13.55-68.51-9.94-94.51zm-120.28 168.11c-14.03.02-27.62-4.89-38.39-13.88.49-.26 1.34-.73 1.89-1.07l63.72-36.8c3.26-1.85 5.26-5.32 5.24-9.07v-89.83l26.93 15.55c.29.14.48.42.52.74v74.39c-.04 33.08-26.83 59.9-59.91 59.97zm-128.84-55.03c-7.03-12.14-9.56-26.37-7.15-40.18.47.28 1.3.79 1.89 1.13l63.72 36.8c3.23 1.89 7.23 1.89 10.47 0l77.79-44.92v31.1c.02.32-.13.63-.38.83l-64.41 37.19c-28.69 16.52-65.33 6.7-81.92-21.95zm-16.77-139.09c7-12.16 18.05-21.46 31.21-26.29 0 .55-.03 1.52-.03 2.2v73.61c-.02 3.74 1.98 7.21 5.23 9.06l77.79 44.91-26.93 15.55c-.27.18-.61.21-.91.08l-64.42-37.22c-28.63-16.58-38.45-53.21-21.95-81.89zm221.26 51.49-77.79-44.92 26.93-15.54c.27-.18.61-.21.91-.08l64.42 37.19c28.68 16.57 38.51 53.26 21.94 81.94-7.01 12.14-18.05 21.44-31.2 26.28v-75.81c.03-3.74-1.96-7.2-5.2-9.06zm26.8-40.34c-.47-.29-1.3-.79-1.89-1.13l-63.72-36.8c-3.23-1.89-7.23-1.89-10.47 0l-77.79 44.92v-31.1c-.02-.32.13-.63.38-.83l64.41-37.16c28.69-16.55 65.37-6.7 81.91 22 6.99 12.12 9.52 26.31 7.15 40.1zm-168.51 55.43-26.94-15.55c-.29-.14-.48-.42-.52-.74v-74.39c.02-33.12 26.89-59.96 60.01-59.94 14.01 0 27.57 4.92 38.34 13.88-.49.26-1.33.73-1.89 1.07l-63.72 36.8c-3.26 1.85-5.26 5.31-5.24 9.06l-.04 89.79zm14.63-31.54 34.65-20.01 34.65 20v40.01l-34.65 20-34.65-20z"/>
+    </svg>`,
+    claude: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <path fill="var(--color-text)" d="M100.5,340.4l100.7-56.5l1.7-4.9l-1.7-2.7h-4.9l-16.9-1l-57.6-1.6L72,271.6L23.6,269l-12.2-2.6L0,251.4l1.2-7.5l10.2-6.8l14.6,1.3l32.4,2.2l48.6,3.4l35.2,2.1l52.2,5.4h8.3l1.2-3.3l-2.9-2.1l-2.2-2.1l-50.3-34l-54.4-36l-28.5-20.7l-15.4-10.5l-7.8-9.9l-3.4-21.5l14-15.4l18.8,1.3l4.8,1.3l19.1,14.6l40.7,31.5l53.1,39.1l7.8,6.5l3.1-2.2l0.4-1.6l-3.5-5.8l-28.9-52.2l-30.8-53.1l-13.7-22L120.3,40c-1.4-5.1-2.1-10.3-2.2-15.6l16-21.6l8.8-2.9l21.2,2.9l9,7.8l13.2,30.2l21.4,47.6l33.2,64.6l9.7,19.2l5.2,17.7l1.9,5.4h3.4v-3.1l2.7-36.4l5.1-44.7l4.9-57.5l1.7-16.2l8-19.4l15.9-10.5l12.5,6l10.2,14.6l-1.4,9.5l-6.1,39.5L302.7,139l-7.8,41.4h4.5l5.2-5.2l21-27.9l35.2-44l15.6-17.5l18.1-19.3l11.7-9.2h22l16.2,24.1l-7.3,24.9l-22.7,28.7l-18.8,24.4l-27,36.3l-16.9,29l1.6,2.3l4-0.4l60.9-12.9l32.9-6l39.3-6.7l17.8,8.3l1.9,8.4l-7,17.2l-42,10.4l-49.3,9.9l-73.4,17.3l-0.9,0.6l1,1.3l33,3.1l14.1,0.8h34.6l64.4,4.8l16.9,11.1l10.1,13.6l-1.7,10.3l-25.9,13.2l-35-8.3l-81.7-19.4l-28-7h-3.9v2.3l23.3,22.8l42.8,38.6l53.5,49.7l2.7,12.3l-6.9,9.7l-7.3-1l-47-35.3l-18.2-15.9l-41.1-34.6h-2.7v3.6l9.5,13.8l50,75.1l2.6,23l-3.6,7.5l-13,4.5l-14.3-2.6L337,429.4l-30.2-46.2l-24.4-41.5l-3,1.7l-14.4,154.8l-6.7,7.9l-15.6,6l-12.9-9.8l-6.9-15.9l6.9-31.5l8.3-41l6.7-32.6l6.1-40.5l3.6-13.5l-0.3-0.9l-3,0.4l-30.6,42l-46.5,62.8l-36.8,39.4l-8.8,3.5l-15.3-7.9l1.4-14.1l8.6-12.6l50.9-64.8l30.7-40.1l19.8-23.2l-0.1-3.4h-1.2L88.1,395.9L64,399.1l-10.4-9.7l1.3-15.9l4.9-5.2l40.7-28C100.6,340.2,100.5,340.4,100.5,340.4z"/>
+    </svg>`
+  };
+
   const CONFIG = {
     commandPathDelimiter: '/',
     commandSearchDelimiter: ' ',
@@ -43,32 +89,33 @@
     ['r', { 
       name: 'Requirements', 
       url: 'https://confluence.zeal.link/display/MYZ/Product+Requirements',
-      group: '💼'
+      group: 'Work',
+      icon: ICONS.confluence
     }],
     ['t', { 
       name: 'Trading', 
       url: 'https://confluence.zeal.link/display/MYZ/Trading',
-      group: '💼'
+      group: 'Work',
+      icon: ICONS.confluence
     }],
     ['j', { 
       name: 'Jira Board', 
       url: 'https://jira.zeal.link/secure/RapidBoard.jspa?rapidView=123&projectKey=PP&view=planning&issueLimit=100#',
-      group: '💼'
+      group: 'Work',
+      icon: ICONS.jira
     }],
 
- 
-
     // Personal Tools
-    ['a', { name: 'Chat', url: 'https://chat.openai.com', group: '🏠' }],
-    ['b', { name: 'Claude', url: 'https://claude.ai/login', group: '🏠' }],
-    ['x', { name: 'X', url: 'https://twitter.com/home', group: '🏠' }],
-    ['f', { name: 'Cloudflare', url: 'https://one.dash.cloudflare.com/deec3c68003b1e10d5027984c23bd0ff/networks/tunnels', group: '🏠' }],
+    ['a', { name: 'Chat', url: 'https://chat.openai.com', group: '🏠', icon: ICONS.chat }],
+    ['b', { name: 'Claude', url: 'https://claude.ai/login', group: '🏠', icon: ICONS.claude }],
+    ['x', { name: 'X', url: 'https://twitter.com/home', group: '🏠', icon: ICONS.x }],
+    ['f', { name: 'Cloudflare', url: 'https://one.dash.cloudflare.com/deec3c68003b1e10d5027984c23bd0ff/networks/tunnels', group: '🏠', icon: ICONS.cloudflare }],
     ['s', { name: 'Marious', url: 'https://mariushosting.com/', group: '🏠' }],
-    ['g', { name: 'GitHub', url: 'https://github.com/trending', group: '🏠' }],
-    ['8', { name: 'n8n', url: 'https://n8n.dev.vodka/', group: '🏠' }],
+    ['g', { name: 'GitHub', url: 'https://github.com/trending', group: '🏠', icon: ICONS.github }],
+    ['8', { name: 'n8n', url: 'https://n8n.dev.vodka/', group: '🏠', icon: ICONS.n8n }],
 
-       // Piracy Tools
-       ['p', { name: 'Reddit Piracy', url: 'https://reddit.com/r/Piracy', group: '🏴‍☠️' }],
+    // Piracy Tools
+    ['p', { name: 'Reddit Piracy', url: 'https://reddit.com/r/Piracy', group: '🏴‍☠️' }],
     ['d', { name: 'Direct DL', url: 'https://evasion.github.io', group: '🏴‍☠️' }],
     ['o', { name: 'OpenSource', url: 'https://opensource.info', group: '🏴‍☠️' }],
     ['l', { name: 'OSS Alt', url: 'https://opensourcealternative.to', group: '🏴‍☠️' }],
@@ -100,6 +147,22 @@
       margin: 0 0 var(--space) 0;
       text-transform: none;
       text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .group-title svg {
+      width: 28px;
+      height: 28px;
+      fill: var(--color-text);
+      opacity: 0.9;
+    }
+
+    .group-title svg:hover {
+      opacity: 1;
+      transform: scale(1.1);
+      transition: all var(--transition-speed) ease;
     }
 
     .group-commands {
@@ -127,12 +190,14 @@
     }
 
     .command {
-      display: flex;
+      display: grid;
+      grid-template-columns: 24px 1fr 24px;
       gap: var(--space);
       outline: 0;
       padding: var(--space);
       position: relative;
       text-decoration: none;
+      align-items: center;
     }
 
     .command::after {
@@ -148,20 +213,46 @@
       opacity: 0.1;
     }
 
-    .key {
-      color: var(--color-text);
-      display: inline-block;
-      text-align: center;
-      width: 3ch;
+    .icon {
+      width: 16px;
+      height: 16px;
+      opacity: 0.7;
+      transition: opacity var(--transition-speed);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .icon svg {
+      width: 100%;
+      height: 100%;
     }
 
     .name {
       color: var(--color-text-subtle);
       transition: color var(--transition-speed);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .key {
+      color: var(--color-text);
+      text-align: right;
+      opacity: 0.5;
+      font-size: 0.9em;
+    }
+
+    .command:where(:focus, :hover) .icon {
+      opacity: 1;
     }
 
     .command:where(:focus, :hover) .name {
       color: var(--color-text);
+    }
+
+    .command:where(:focus, :hover) .key {
+      opacity: 0.8;
     }
   </style>
   <nav class="commands"></nav>
@@ -170,8 +261,9 @@
 <template id="command-template">
   <li>
     <a class="command" rel="noopener noreferrer">
-      <span class="key"></span>
+      <span class="icon"></span>
       <span class="name"></span>
+      <span class="key"></span>
     </a>
   </li>
 </template>
@@ -197,21 +289,31 @@
       // Group commands by their group property
       const groups = new Map();
       for (const [key, command] of COMMANDS.entries()) {
-        const groupName = command.group || 'Other';
+        const groupName = command.group?.name || command.group || 'Other';
         if (!groups.has(groupName)) {
-          groups.set(groupName, []);
+          groups.set(groupName, {
+            icon: command.group?.icon || '',
+            commands: []
+          });
         }
-        groups.get(groupName).push({ key, ...command });
+        groups.get(groupName).commands.push({ key, ...command });
       }
 
       // Create groups and add commands to them
-      for (const [groupName, groupCommands] of groups.entries()) {
+      for (const [groupName, group] of groups.entries()) {
         const groupClone = groupTemplate.content.cloneNode(true);
         const groupElement = groupClone.querySelector('.group');
-        groupElement.querySelector('.group-title').textContent = groupName;
+        const titleElement = groupElement.querySelector('.group-title');
+        
+        if (group.icon) {
+          titleElement.innerHTML = group.icon;
+        } else {
+          titleElement.textContent = groupName;
+        }
+
         const groupCommandsList = groupElement.querySelector('.group-commands');
 
-        for (const { key, name, url } of groupCommands) {
+        for (const { key, name, url, icon } of group.commands) {
           if (!name || !url) continue;
           const commandClone = commandTemplate.content.cloneNode(true);
           const command = commandClone.querySelector('.command');
@@ -219,6 +321,9 @@
           if (CONFIG.openLinksInNewTab) command.target = '_blank';
           commandClone.querySelector('.key').innerText = key;
           commandClone.querySelector('.name').innerText = name;
+          if (icon) {
+            commandClone.querySelector('.icon').innerHTML = icon;
+          }
           groupCommandsList.append(commandClone);
         }
 
